# atalaia

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-cuda  README.md  atalaia.sln  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
atalaia-streaming/: CMakeLists.txt  CameraAtalaia.cpp  CameraAtalaia.hpp  Dockerfile  FrameData.cs  MatOperation.cs  MovementDetector.cpp  MovementDetector.hpp  ObjectDetector.cpp  ObjectDetector.hpp  Program.cs  StreamPipeline.cs  VideoStream.cpp  VideoStream.hpp  atalaia-streaming.csproj  main.cpp  main.h  main.hpp
atalaia-streaming/NovaPasta/: Telegram.cs
atalaia-streaming/Properties/: launchSettings.json
atalaia-streaming/movementDetection/: BlurDiffMovementDetector.cs  BufferedBlurDiffMovementDetector.cs  DetectedMovement.cs  MovementAnalysis.cs  MovementDetectionProcess.cs  MovementRecord.cs  ProcessedFrame.cs  RecordedFrameMetadata.cs  Recorder.cs
atalaia-streaming/notify/: Listener.cpp  Listener.hpp  LocalNotifier.cpp  LocalNotifier.hpp  Notify.hpp
atalaia-streaming/notify/amqp/: AMQPNotifier.cpp  AMQPNotifier.hpp  AtalaiaTcpHandler.cpp  AtalaiaTcpHandler.hpp
atalaia-streaming/objectDetection/: DetectedObject.cs  ObjectDetectionProcess.cs  YoloV3.cs
atalaia-streaming/recorder/: MotionRecorder.cpp  MotionRecorder.hpp  MovementDetector.cpp  MovementDetector.hpp  ObjectDetector.cpp  ObjectDetector.hpp  ObjectRecorder.cpp  ObjectRecorder.hpp  VideoStream.cpp  VideoStream.hpp
atalaia-streaming/util/: BlockingQueue.hpp  ClassifierFromMovement.hpp
telegram-reporter/: Dockerfile  send-telegram.sh
